Fix wrong margin

--- a/assets/src/css/site/components/_component-footer.scss
+++ b/assets/src/css/site/components/_component-footer.scss
@@ -13,6 +13,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-block-start: 0 !important;
+    margin-block-end: 0 !important;
 }
 
 
